# MetaStripper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  metastripper.rb
.cargo/: config.toml
Formula/: metastripper.rb
src/: image.rs  main.rs  pdf.rs  video.rs
src/tests/: create_test_files.rs
