[package]
name = "metastripper"
version = "0.1.0"
edition = "2021"
authors = ["SubnetMasked <subnetmasked@cock.li>"]
description = "A cross-platform command-line tool for removing privacy-sensitive metadata from files"
license = "GPL-3.0-only"
repository = "https://github.com/subnetmasked/MetaStripper"
readme = "README.md"
keywords = ["metadata", "privacy", "exif", "image", "video", "pdf"]
categories = ["command-line-utilities", "filesystem", "multimedia::image", "multimedia::video"]
links = { "ffmpeg" = "ffmpeg" }

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
pdf = "0.8"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
rayon = "1.8"

[[bin]]
name = "metastripper"
path = "src/main.rs"

[[bin]]
name = "create_test_files"
path = "src/tests/create_test_files.rs"
