[package]
name = "metastripper"
version = "0.1.4"
edition = "2021"
authors = ["SubnetMasked <subnetmasked@cock.li>"]
description = "A cross-platform command-line tool for removing privacy-sensitive metadata from files"
license = "GPL-3.0-only"
repository = "https://github.com/subnetmasked/MetaStripper"
readme = "README.md"
keywords = ["metadata", "privacy", "exif", "image", "video"]
categories = ["command-line-utilities", "filesystem", "multimedia::image", "multimedia::video"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
rayon = "1.8"
kamadak-exif = "0.5"
chrono = "0.4"
serde_json = "1.0"

[[bin]]
name = "metastripper"
path = "src/main.rs"
